--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-image-zoom": "^1.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-use-pagination": "^2.0.1",
